--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -21,6 +21,15 @@ $breakpoint: (
   }
 }
 
+@keyframes infinity-scroll-left{
+	from {
+		transform: translateX(0);
+	  }
+	  to {
+		transform: translateX(-100%);
+	  }
+}
+
 $background-color:#f9f9f9;
 
 body{
@@ -56,13 +65,12 @@ img{
 		right: 0px;
 		z-index: 10;
 		height: 60px;
-		
+		background: rgba(#fff, .4);
 		& .toggle-sp{
 			position: relative;
-			width: 100%;
+			width: 40px;
 			height: 100%;
-			background: rgba(#fff, .4);
-
+			float: right;
 			&:hover{
 				cursor: pointer;
 			}
@@ -398,26 +406,51 @@ img{
 
 		}
 		& .sns{
-		display: flex;
+		
 		 .instagram{
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: space-between;
-			width: 60%;
-			margin-right:5%;
+			
+			
+			overflow-x: hidden;
+			position: relative;
+			width: 100%;
+			height: 500px;
+			
+			&_wrapper{
+		
+				width: 100%;
+				height: 100%;
+				justify-content: space-between;
+				position:absolute;
+				display: flex;
+				animation :infinity-scroll-left 20s infinite linear 0.5s both;
+			
+				
+			}
 			& .post{
-				width: 40%;
-				height: 300px;
+				
+				width: calc(100% /3);
+				min-width: calc(100% / 3);
+				margin-right:20px;
+		
+			
+				
+				
+				
+				
+				
 				& img{
-					height: 100%;
+					width: 100%;
+					height: auto;
 					object-fit: cover;
-					border-radius: 10px;
+					border-radius: 3px;
+					
 					
 				}
 			}
 		}
 		 .twitter{		
-			width:40%;			
+			width:40%;	
+			margin-top: 200px;		
 		}
 		}
 
