--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -68,7 +68,7 @@ img{
 		background: rgba(#fff, .4);
 		& .toggle-sp{
 			position: relative;
-			width: 40px;
+			width: 80px;
 			height: 100%;
 			float: right;
 			&:hover{
@@ -272,7 +272,7 @@ img{
 			font-size: 0.6em;
 			@include mq(sp){
 				font-size: .3em;
-				margin-left:200px;
+				
 			}
 		
 		}
@@ -284,13 +284,71 @@ img{
 			border: 1px solid rgba(#eee,.8);
 			@include mq(tab){
 				line-height: 20px;
-				font-size: .8em;
+				font-size: .5em;
 				padding: 10px;
 			}
 		}
 	}
-			
-		
+
+	.posts{
+			display: flex;
+			justify-content:space-between;
+			flex-wrap: wrap;
+			.article{
+	
+				&:nth-child(n){
+					width: 48%;
+					height: 100%;
+					transition: all .5s;
+					box-sizing: border-box;
+					margin-bottom: 40px;
+					@include mq(sp){
+						width: 100%;
+					}
+				}			
+				& img{
+					width: 100%;
+					height: 200px;
+					object-fit: cover;
+					@include mq(tab){
+						height: 300px;
+					}
+				}
+				&_remarks{		
+					&_title{
+						font-size: 1.5em;
+						margin: 20px 0 10px 5px;
+						min-height: 55px;
+					
+						@include mq(tab){
+							margin-bottom: 0;
+							font-size: 1.0em;
+				
+						}
+						
+					}
+					&_text{
+						font-size: 1.0em;
+						padding-left: 20px;
+						padding-right: 20px;
+						min-height: 120px;
+						@include mq(tab){
+							font-size: .8em;
+						}
+					}
+					&_date{
+						font-size: 0.8em;
+						text-align: right;
+					}
+				}
+				&:hover{
+					transition: all .5s;
+					transform: translateY(-5px);
+					filter: drop-shadow(3px 3px 3px rgba(0,0,0,0.2));
+					cursor: pointer;
+				}
+			}
+		}
 		
 }
 
@@ -348,63 +406,7 @@ img{
 			}
 		}
 
-		& .posts{
-			display: flex;
-			justify-content:space-between;
-			flex-wrap: wrap;
-			.article{
 		
-				&:nth-child(n){
-					width: 48%;
-					height: 600px;
-					transition: all .5s;
-					box-sizing: border-box;
-					
-					@include mq(sp){
-						width: 100%;
-					}
-				}			
-				& img{
-				  	width: 100%;
-					height: 50%;
-					object-fit: cover;
-				}
-				&_remarks{		
-					&_title{
-						font-size: 1.5em;
-						margin: 20px 0 10px 5px;
-						min-height: 55px;
-					
-						@include mq(tab){
-							margin-bottom: 0;
-							font-size: 1.0em;
-				
-						}
-						
-					}
-					&_text{
-						font-size: 1.0em;
-						padding-left: 20px;
-						padding-right: 20px;
-						min-height: 120px;
-						@include mq(tab){
-							font-size: .8em;
-						}
-					}
-					&_date{
-						font-size: 0.8em;
-						text-align: right;
-					}
-				}
-				&:hover{
-					transition: all .5s;
-					transform: translateY(-5px);
-					filter: drop-shadow(3px 3px 3px rgba(0,0,0,0.2));
-					cursor: pointer;
-				}
-			}
-
-		}
 		& .sns{
 		
 		 .instagram{
@@ -418,7 +420,7 @@ img{
 			&_wrapper{
 		
 				width: 100%;
-				height: 100%;
+				
 				justify-content: space-between;
 				position:absolute;
 				display: flex;
@@ -427,25 +429,50 @@ img{
 				
 			}
 			& .post{
-				
 				width: calc(100% /3);
 				min-width: calc(100% / 3);
 				margin-right:20px;
-		
-			
-				
-				
-				
-				
-				
-				& img{
+				position: relative;
+				&_image{
+					
 					width: 100%;
-					height: auto;
+					height: 350px;
 					object-fit: cover;
 					border-radius: 3px;
-					
-					
+					@include mq(tab){
+						height: 250px;
+					}
 				}
+				&_desc{
+					
+					width: 100%;
+					background: rgba(#111,.3);
+					height: 30px;
+					position: absolute;
+					bottom: 0px;
+					&_heart{
+						position: absolute;
+						width: 25px;
+						right: 20px;
+						bottom:3px;
+						opacity: .7;
+					}
+					&_like-count{
+						position:absolute;
+						right: 30px;
+						bottom: 11px;
+						color: #fff;
+						font-size: .5em;
+						text-align: center;
+					}
+					&_caption{
+						position:absolute;
+						left: 32px;
+						color: #fff;
+						bottom: 7px;
+					}	
+				}
+						
 			}
 		}
 		 .twitter{		
@@ -652,64 +679,7 @@ img{
 }
 
 //blog
-.blog{
-	&_content{
-		display: flex;
-		justify-content:space-between;
-		flex-wrap: wrap;
-		.article{
 
-			&:nth-child(n){
-				width: 48%;
-				height: 600px;
-				transition: all .5s;
-				box-sizing: border-box;
-				
-				@include mq(sp){
-					width: 100%;
-				}
-			}			
-			& img{
-				width: 100%;
-				height: 50%;
-				object-fit: cover;
-			}
-			&_remarks{		
-				&_title{
-					font-size: 1.5em;
-					margin: 20px 0 10px 5px;
-					min-height: 55px;
-				
-					@include mq(tab){
-						margin-bottom: 0;
-						font-size: 1.0em;
-			
-					}
-					
-				}
-				&_text{
-					font-size: 1.0em;
-					padding-left: 20px;
-					padding-right: 20px;
-					min-height: 120px;
-					@include mq(tab){
-						font-size: .8em;
-					}
-				}
-				&_date{
-					font-size: 0.8em;
-					text-align: right;
-				}
-			}
-			&:hover{
-				transition: all .5s;
-				transform: translateY(-5px);
-				filter: drop-shadow(3px 3px 3px rgba(0,0,0,0.2));
-				cursor: pointer;
-			}
-		}
-	}
-}
 //Page
 
 .page{
