--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -293,63 +293,99 @@ img{
 
 	.posts{
 			display: flex;
-			justify-content:space-between;
 			flex-wrap: wrap;
+			justify-content: space-between;
 			.article{
-	
-				&:nth-child(n){
-					width: 48%;
-					height: 100%;
-					transition: all .5s;
-					box-sizing: border-box;
-					margin-bottom: 40px;
-					@include mq(sp){
-						width: 100%;
-					}
-				}			
-				& img{
+				width: 46%;
+				@include mq(tab){
 					width: 100%;
-					height: 200px;
+				}
+			}
+			.article a{
+				display: flex;
+				align-items: center;
+				width: 100%;
+				padding: 3px 6px;
+				margin-bottom: 40px;
+				justify-content: space-between;
+				box-sizing: border-box;
+				transition: all .5s;
+				border: 1px solid rgba(#111,0.1);
+				border-radius: 5px;
+				min-height: 100px;
+				max-height: 100px;
+				&:hover{
+					transition: all .5s;
+					transform: translateY(-5px);
+					cursor: pointer;
+					border: 1px solid rgba(#111,.4);
+					box-sizing: border-box;
+		
+				}		
+				img{
+					width: 20%;
+					height: 20%;
 					object-fit: cover;
 					@include mq(tab){
-						height: 300px;
+						height: 80px;
+						width: 80px;
 					}
 				}
-				&_remarks{		
-					&_title{
-						font-size: 1.5em;
-						margin: 20px 0 10px 5px;
-						min-height: 55px;
+				.article_remarks{
+					width: 80%;	
 					
+					&_title{
+						font-size: 1.1em;
+						margin: 0 0 10px 10px;
 						@include mq(tab){
-							margin-bottom: 0;
-							font-size: 1.0em;
-				
+							font-size: .9em;
 						}
 						
 					}
 					&_text{
-						font-size: 1.0em;
-						padding-left: 20px;
-						padding-right: 20px;
-						min-height: 120px;
+						font-size: 0.8em;
+						margin: 0 20px 10px 20px;
+
+					
 						@include mq(tab){
-							font-size: .8em;
+							font-size: .7em;
 						}
 					}
 					&_date{
-						font-size: 0.8em;
+						font-size: 0.7em;
 						text-align: right;
 					}
 				}
-				&:hover{
-					transition: all .5s;
-					transform: translateY(-5px);
-					filter: drop-shadow(3px 3px 3px rgba(0,0,0,0.2));
-					cursor: pointer;
-				}
 			}
+	}
+	& .btn{
+		border: 1px solid rgba(#111,.1);
+		border-radius: 40px;
+		text-align: center;
+		float: right;
+		transition: .5s ease;
+		position: relative;
+		width: 100px;
+		height: 35px;
+		&:hover{
+			background: #fff;
+			border-radius: 40px;
+			transition: .5s ease;
+			border: 1px solid rgba(#111,.8);
+		
 		}
+		a{
+			position: absolute;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			top:0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			
+		}
+	}
 		
 }
 
@@ -483,38 +519,13 @@ img{
 			}
 		}
 		 .twitter{		
-			width:40%;	
-			margin-top: 200px;		
+			width:300px;
+			margin: 0px auto;	
+				
 		}
 		}
 
-		& .btn{
-			border: 1px solid;
-			border-radius: 40px;
-			text-align: center;
-			float: right;
-			transition: .5s ease;
-			position: relative;
-			width: 100px;
-			height: 35px;
-			&:hover{
-				background: #fff;
-				border-radius: 40px;
-				transition: .5s ease;
-			
-			}
-			a{
-				position: absolute;
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				top:0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				
-			}
-		}
+		
 }
 
 //About
@@ -737,12 +748,14 @@ img{
 	
 				.markup-area{
 					background: rgba(#fff,1);
-					width: 100%;
+					width: 80%;
 					line-height: 0;
 					font-size: .8em;
 					margin-bottom: 40px;
 					position: relative;
 					overflow-x: scroll;
+					padding: 20px;
+					margin: 0 auto;
 					code{
 						line-height: 20px;
 						display: block;
@@ -750,14 +763,12 @@ img{
 						max-height: 300px;
 						
 					}
-					&-copy{
+					&-copy, .btn{
 						position:absolute;
 						line-height: 0px;
-						top:20px;
-						right: 10px;
+						top:0;
+						right: 20px;
 						background: #eee;
-						border: 1px solid rgba(#111,.4);
-						border-radius: 10px;
 						padding: 15px 15px;
 						text-align: center;
 						transition: .5s ease;
