--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -31,7 +31,9 @@ $breakpoint: (
 }
 
 $background-color:#f9f9f9;
-
+$content-width :85%;
+$no-focus-style:1px solid rgba(#111,.1);
+$focus-style:1px solid rgba(#111,.8);
 body{
   font-size: 100%;
   font-family: 'Murecho', sans-serif;
@@ -55,7 +57,7 @@ img{
 }
 
 .aside{
-	width: 15%;
+	width: (100% - $content-width);
 	position: fixed;
 	right: 0;
 	height: 100%;
@@ -208,7 +210,7 @@ img{
 }
 //共通
 .main{ 
-	width: 85%;
+	width: $content-width;
 	background: $background-color;
 	@include mq(tab){
 		width: 100%;
@@ -288,7 +290,12 @@ img{
 				font-size: .5em;
 				padding: 10px;
 			}
+			&:focus{
+				outline: $focus-style;
+			}
+			
 		}
+
 	}
 
 	.posts{
@@ -310,15 +317,15 @@ img{
 				justify-content: space-between;
 				box-sizing: border-box;
 				transition: all .5s;
-				border: 1px solid rgba(#111,0.1);
+				border:$no-focus-style;
 				border-radius: 5px;
 				min-height: 100px;
-				max-height: 100px;
+				max-height: 200px;
 				&:hover{
 					transition: all .5s;
 					transform: translateY(-5px);
 					cursor: pointer;
-					border: 1px solid rgba(#111,.4);
+					border:$focus-style;
 					box-sizing: border-box;
 		
 				}		
@@ -335,7 +342,7 @@ img{
 					width: 80%;	
 					
 					&_title{
-						font-size: 1.1em;
+						font-size: 1.0em;
 						margin: 0 0 10px 10px;
 						@include mq(tab){
 							font-size: .9em;
@@ -343,7 +350,7 @@ img{
 						
 					}
 					&_text{
-						font-size: 0.8em;
+						font-size: 0.7em;
 						margin: 0 20px 10px 20px;
 
 					
@@ -358,8 +365,47 @@ img{
 				}
 			}
 	}
+	.tab{
+		display: flex;
+		width: 100%;
+		justify-content: space-between;
+		font-size: 1.4em;
+		margin: 0 auto 80px auto ;
+		
+		@include mq(sp){
+			width: 100%;
+			margin: 0 auto 0 auto ;
+		}
+
+		li{
+			cursor: pointer;
+			padding: 10px 0;
+			transition: .5s all;
+			border-radius: 2px;
+			border-width: thin;
+			text-align: center;
+			border: 1px solid rgba(#111,.3);
+			width: calc(100% / 3);
+			
+			
+			&:hover{
+				background:#fff;
+				transition: .5s all;
+				
+			}
+			&:focus{
+				background:#fff;
+				transition: .5s all;
+				transform: translateY(-2px);
+			}
+			@include mq(tab){
+				font-size: .7em;
+			}
+		}
+
+	}
 	& .btn{
-		border: 1px solid rgba(#111,.1);
+		border:$no-focus-style;
 		border-radius: 40px;
 		text-align: center;
 		float: right;
@@ -371,7 +417,7 @@ img{
 			background: #fff;
 			border-radius: 40px;
 			transition: .5s ease;
-			border: 1px solid rgba(#111,.8);
+			border:$focus-style;
 		
 		}
 		a{
@@ -386,6 +432,7 @@ img{
 			
 		}
 	}
+	
 		
 }
 
@@ -608,45 +655,7 @@ img{
 		}
 
 		.skill{
-			&_tab{
-				display: flex;
-				width: 80%;
-				justify-content: space-between;
-				font-size: 1.4em;
-				margin: 0 auto 80px auto ;
-				
-				@include mq(sp){
-					width: 100%;
-					margin: 0 auto 0 auto ;
-				}
-		
-				&_li{
-					cursor: pointer;
-					padding: 10px 0;
-					transition: .5s all;
-					border-radius: 2px;
-					border-width: thin;
-					text-align: center;
-					border: 1px solid rgba(#111,.3);
-					width: calc(100% / 3);
-					
-					
-					&:hover{
-						background:#fff;
-						transition: .5s all;
-						
-					}
-					&:focus{
-						background:#fff;
-						transition: .5s all;
-						transform: translateY(-2px);
-					}
-					@include mq(tab){
-						font-size: .7em;
-					}
-				}
-
-			}
+			
 			&_content{
 				position: relative;
 				
@@ -702,7 +711,17 @@ img{
 }
 
 //blog
-
+.blog{
+	.search_input{
+		width: 100%;
+		height: 50px;
+		border:$no-focus-style;
+		border-radius: 5px;
+		&:focus{
+			outline: $focus-style;
+		}
+	}
+}
 //Page
 
 .page{
@@ -870,7 +889,7 @@ img{
 			&_item{
 				display: flex;
 				margin: 30px auto 30px auto;
-			
+				align-items: center;
 				label{
 					width: 20%;
 				}
@@ -883,6 +902,9 @@ img{
 					@include mq(tab){
 						min-height: 30px;
 						font-size:16px;
+					}
+					&:focus{
+						outline: $focus-style;
 					}
 				}
 				&_submit{
@@ -897,12 +919,13 @@ img{
 	}
 }
 .footer{
-	width: 80%;
+	width: $content-width;
 	height: 50px;
 	font-size: 1.2em;
 	padding: 10px;
 	line-height:50px;
 	text-align: center;
+
 
 	@include mq(tab){
 		width: 100%;
