--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -131,6 +131,7 @@ img{
 			transition: .5s ease;
 			z-index: 0;
 			margin-top: 0px;
+			padding-top: 10vh;
 			&.show{
 				
 				opacity: 1;
@@ -370,22 +371,29 @@ img{
 		width: 100%;
 		justify-content: space-between;
 		font-size: 1.4em;
-		margin: 0 auto 80px auto ;
-		
+		margin: 0 auto 40px auto ;
+		flex-wrap: wrap;
+		margin-right: 5px;
 		@include mq(sp){
 			width: 100%;
-			margin: 0 auto 0 auto ;
+			margin: 0 auto 80px auto ;
 		}
 
 		li{
 			cursor: pointer;
 			padding: 10px 0;
 			transition: .5s all;
-			border-radius: 2px;
-			border-width: thin;
+		
 			text-align: center;
-			border: 1px solid rgba(#111,.3);
-			width: calc(100% / 3);
+			border-bottom: 1px solid rgba(#111,.2);
+			width: calc(100% / 6 - 4px);
+			margin-bottom: 30px;
+			background:rgba(#eee,.3);
+			@include mq(tab){
+				width: calc(100% / 3 - 1px);
+				padding: 5px 0;
+				font-size: .7em;
+			}
 			
 			
 			&:hover{
@@ -396,11 +404,9 @@ img{
 			&:focus{
 				background:#fff;
 				transition: .5s all;
-				transform: translateY(-2px);
+				transform: translateY(-1px);
 			}
-			@include mq(tab){
-				font-size: .7em;
-			}
+			
 		}
 
 	}
@@ -712,14 +718,27 @@ img{
 
 //blog
 .blog{
-	.search_input{
+	.search_area{
 		width: 100%;
-		height: 50px;
-		border:$no-focus-style;
-		border-radius: 5px;
-		&:focus{
-			outline: $focus-style;
+		
+		&_input{
+			width: 40%;
+			float: right;
+			height: 50px;
+			border:$no-focus-style;
+			border-radius: 5px;
+			margin-bottom: 50px;
+			padding-left: 10px;
+			@include mq(sp){
+				width: 100%;
+			}
+			&:focus{
+				outline: none;
+				border: $focus-style;
+				border-radius: 4px;
+			}
 		}
+		
 	}
 }
 //Page
@@ -738,7 +757,9 @@ img{
 				}
 			}
 			&_content{
-				font-size: 1.1em;
+				width: 80%;
+				margin: 0 auto;
+				font-size: .9em;
 				margin-top: 50px;
 				line-height: 30px;
 				@include mq(tab){
@@ -769,12 +790,16 @@ img{
 					background: rgba(#fff,1);
 					width: 80%;
 					line-height: 0;
-					font-size: .8em;
+					font-size: .9em;
+					margin-top: 40px;
 					margin-bottom: 40px;
 					position: relative;
 					overflow-x: scroll;
 					padding: 20px;
-					margin: 0 auto;
+					
+					@include mq(tab){
+						width: 100%;
+					}
 					code{
 						line-height: 20px;
 						display: block;
@@ -807,7 +832,7 @@ img{
 			}
 		}
 		.close_published_posts{
-			margin-top: 50px;
+			margin-top: 200px;
 			display: flex;
 			justify-content: space-between;
 			flex-wrap: wrap;
@@ -816,6 +841,7 @@ img{
 				width: 45%;
 				padding: 20px 5px;
 				height: auto;
+				min-height: 300px;
 				transition: all .5s;
 				@include mq(sp){
 					width: 100%;
@@ -904,7 +930,9 @@ img{
 						font-size:16px;
 					}
 					&:focus{
-						outline: $focus-style;
+						outline: none;
+						border: $focus-style;
+						border-radius: 3px;
 					}
 				}
 				&_submit{
