--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -56,7 +56,7 @@ img{
 	width: 100%;
 }
 
-.aside{
+.header{
 	width: (100% - $content-width);
 	position: fixed;
 	right: 0;
@@ -121,7 +121,7 @@ img{
 			}
 		}
 	}
-	.header{
+	.nav{
 		justify-content:center;
 		align-items:center;
 		margin-top: 100px;
@@ -331,20 +331,17 @@ img{
 		
 				}		
 				img{
-					width: 20%;
-					height: 20%;
+					width: 30%;			
 					object-fit: cover;
-					@include mq(tab){
-						height: 80px;
-						width: 80px;
-					}
+					
 				}
 				.article_remarks{
-					width: 80%;	
+					width: 70%;	
 					
 					&_title{
 						font-size: 1.0em;
-						margin: 0 0 10px 10px;
+						margin: 0 0 10px 0x;
+						font-weight: bold;
 						@include mq(tab){
 							font-size: .9em;
 						}
@@ -352,7 +349,7 @@ img{
 					}
 					&_text{
 						font-size: 0.7em;
-						margin: 0 20px 10px 20px;
+						margin: 10px;
 
 					
 						@include mq(tab){
@@ -362,6 +359,9 @@ img{
 					&_date{
 						font-size: 0.7em;
 						text-align: right;
+						@include mq(tab){
+							font-size: .5em;
+						}
 					}
 				}
 			}
@@ -626,8 +626,9 @@ img{
 							font-size: 1.1em;
 							margin-bottom: 10px;	
 						}
+						
 						font-size: 0.8em;
-						margin-bottom: 10px;
+						
 						line-height: 20px;
 					}
 				}
@@ -863,7 +864,7 @@ img{
 					
 					.markup-area-copy{
 						position: absolute;						
-						top:-21px;
+						top:-23px;
 						right: 0px;						
 						background: rgba(#111,.4);					
 						transition: .5s ease;
@@ -898,12 +899,12 @@ img{
 			
 			&_prev, &_next{
 				width: 45%;
-				
-				max-height: 100px;
-				
+				max-height: 100px;			
 				transition: all .5s;
+				position: relative;
 				@include mq(sp){
 					width: 100%;
+					margin-bottom: 80px;
 				}
 				&:hover{
 					transition: all .5s;
@@ -917,15 +918,22 @@ img{
 					justify-content: center;
 					.article_image{
 						width: 30%;
-						position:relative;
+						
 						p{
 							position: absolute;
-							top:5px;
-							left: 10px;
-							background:rgba(#111,.5);
-							color: white;
+							left: 0;
+							top: -29px;
+							background:rgba(#111,.2);
+							
 							width: auto;
 							padding: 5px 10px;
+							width: 100%;
+							@include mq(sp){
+								margin: 0 auto;
+								top:-20px;
+								height: 20px;
+								font-size: 0.7em;
+							}
 						}
 						img{
 							width: 100%;
@@ -939,7 +947,7 @@ img{
 					}
 					
 					.article_remarks{
-						width: 65%;
+						width: 70%;
 						display: flex;
 						justify-content: center;
 						align-items: center;
@@ -949,7 +957,7 @@ img{
 						color: #111;
 
 						@include mq(sp){
-							font-size: 1.0em;
+							font-size: 0.8em;
 						}
 						
 				}
