--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -862,6 +862,9 @@ img{
 						padding: 5px;
 					}
 				}
+				a{
+					text-decoration: underline;
+				}
 				p{
 					margin-left: 20px;
 					margin-top: 20px;
