--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -56,7 +56,7 @@ ul{
 }
 
 img{
-	width: 100%;
+	max-width: 100%;
 }
 
 .header{
@@ -184,6 +184,8 @@ img{
 		}
 	}
 }
+
+
 
 .modal{
 	position: fixed;
@@ -515,50 +517,140 @@ img{
 		
 		& .sns{	
 		 .instagram{
-
 			position: relative;
 			width: 100%;
 			height: auto;
-
 			&_wrapper{
 				display: flex;		
 				width: 100%;				
 				justify-content: space-between;
 				flex-wrap: wrap;
-				position:absolute;
 
 			}
+			& .image_modal{
+				transition: .8s ease;
+				opacity: 0;
+				width: 100%;
+				height: 100%;
+				left: 0;
+				right: 0;
+				top: 0;
+				bottom: 0;
+				position: fixed;
+				&.show{
+					background:rgba(#111,.8);
+					z-index: 200;
+					opacity: 1;
+					transition: .8s ease;
+					button{
+						color:#fff;
+						font-size: 2.5em;
+						position: absolute;
+						right: 30px;
+						top:20px;
+					}
+					& .modal-pic{
+						width: 50%;
+						height: auto;
+						position: absolute;
+						top: 50%;
+						left: 50%;
+						transform: translate(-50%, -50%);
+						-webkit-transform: translate(-50%, -50%);
+						-ms-transform: translate(-50%, -50%);
+			
+						@include mq(tab){
+							width: 90%;
+							height: auto;
+						}
+					}
+					& .left-arrow{
+						position: absolute;
+						width: 40px;
+						height: 40px;
+						cursor: pointer;
+						display: block;
+						top:50%;
+						left: 200px;
+						z-index: 200;
+						@include mq(tab){
+							left: 30px;
+							top: 49%;
+						}
+						&::before{
+							display: block;
+							content: "";
+							position: absolute;
+							top:11px;
+							width: 20px;
+							height: 1px;
+							border: 1px solid #fff;
+							transform: rotate(-45deg);
+						}
+						&::after{
+							display: block;
+							content: "";
+							position: absolute;
+							top:25px;
+							width: 20px;
+							height: 1px;
+							border: 1px solid #fff;
+							transform: rotate(45deg);
+						}
+
+					}
+					& .right-arrow{
+						position: absolute;
+						width: 40px;
+						height: 40px;
+						cursor: pointer;
+						top:50%;
+						display: block;
+						right:200px;
+						@include mq(tab){
+							right: 20px;
+							top: 49%;
+						}
+						&::before{
+							display: block;
+							content: "";
+							position: absolute;
+							top:11px;
+							width: 20px;
+							height: 1px;
+							border: 1px solid #fff;
+							transform: rotate(45deg);
+						}
+						&::after{
+							display: block;
+							content: "";
+							position: absolute;
+							top:25px;
+							width: 20px;
+							height: 1px;
+							border: 1px solid #fff;
+							transform: rotate(-45deg);
+						}
+
+					}
+				}
+			}
 			& .post{
-				
+				width: calc(100% / 4 - 20px);
+				height: 150px;
+				text-align: center;
+				position: relative;
+				margin-bottom: 40px;
 				img{
 					object-fit: cover;
 					box-shadow: 15px 15px 10px rgba(#111,.1);
 				}
-				margin-right:20px;
-				position: relative;
-				&:nth-child(1n){
-					width: 200px;
-					height: 240px;
-					
-				}
-				&:nth-child(2n){
-					width: 100px;
-					height: 120px;
-					margin-top: 50px;
-					
-				}
-				&:nth-child(3n){
-					width: 150px;
-					height: 180px;
-					
-				}
-				&:nth-child(4n){
-					width: 170px;
-					height: 205px;
-					
-				}
+				
+				
 				@include mq(tab){
-					width: 80%;
+					width: calc(100% / 2 - 20px);
+					margin-bottom: 40px;
+					height: 200px;
 				}
 				&:hover{
 					transition: all .5s;
@@ -575,7 +667,7 @@ img{
 					@include mq(tab){
 						height: 100%;
 						width: 100%;
-						margin-right: 300px;
+						margin-right: 30px;
 					}
 				}
 				&_desc{
@@ -610,10 +702,8 @@ img{
 			}
 		}
 		 .twitter{		
-			text-align: center;
-			
-			margin: 0px auto;	
-				
+			text-align: center;			
+			margin: 0px auto;					
 		}
 		}
 
