--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -917,7 +917,13 @@ img{
 //Page
 
 .page{
+	.section_content_title{
+		margin-top: 0px;
+		font-style: italic;
+	}
 	&_content{
+
+
 		.article{
 			&_date{
 				font-size: .8em;
@@ -999,29 +1005,16 @@ img{
 					}
 				}
 				h2 {
-					position: relative;
-					margin-top: 60px;
-					padding-left: 30px;
-					font-size: 1.1em;
-					padding: 0.5em;/*文字周りの余白*/
-					background: #eee;/*背景色*/
-					padding-left: 40px;
-					@include mq(sp){
-						padding-left: 25px;
-					}
-					&:before{
-						position: absolute;
-						content: '';
-						background-image: url("../images/answer_icon.png");
-						background-size: 100%;
-						background-repeat: no-repeat;
-						top: 0;
-						left: 10px;
-						width: 20px;
-						height:40px;
-						@include mq(sp){
-							left: 0px;
-						}
+					font-size: 1.1em;			
+					font-weight: bolder;
+					margin: 40px 0;
+					&::after{
+						display: block;
+						content: "";
+						width: 100%;
+						height: 1px;
+						margin-top: 5px;
+						border-bottom: 1px solid #505A5F;
 					}
 				}
 				h3{
@@ -1053,6 +1046,7 @@ img{
 				}
 				a{
 					text-decoration: underline;
+					word-wrap:break-word;
 				}
 				p{
 					
